--- a/index.css
+++ b/index.css
@@ -18,9 +18,114 @@ body{
     font-family: "Open Sans"
 }
 
-img{  height: 170px;
-    width: 170px; 
+img{  height: 120px;
+    width: 120px; 
     
     
 
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(to top, #333, #333 10%, #eee 50%);
+  
+}
+
+header {
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: #333;
+}
+
+header h1 {
+  font-size: 3rem;
+  font-family: "Open Sans";
+  color: #eee;
+}
+
+img {
+  width: 6rem;
+
+  position: absolute;
+  right: 3.125rem;
+}
+
+main {
+  width: 100%;
+  height: calc(100% - 5rem);
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+section {
+  width: 40%;
+  height: 60%;
+
+  background-color: rgba(139, 116, 222, 0.6);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 2rem;
+
+  border-radius: 10px;
+}
+
+.section_servico {
+}
+
+.section_cliente {
+  flex-direction: column;
+}
+
+.section_cliente input {
+  width: 60%;
+
+  padding: 10px;
+  margin: 0.5rem;
+  border: 0;
+  border-radius: 5px;
+}
+
+.btn {
+  width: 70%;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.btn button {
+  width: 40%;
+
+  font-size: 1rem;
+  font-weight: 600;
+
+  padding: 10px;
+  border: 0;
+  border-radius: 7px;
+  text-align: center;
+}
+
+.btn #btn_cancelar {
+  color: rgb(238, 50, 12);
+}
+
+.btn #btn_confirmar {
+  color: rgb(84, 159, 4);
+}
+
