--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,4 @@
-*{
-    margin: 0;
-    padding: 0;
-
-}
-
-h1{
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin: auto;
-    
-}
-
-
-body{
-    font-family: "Open Sans"
-}
-
-img{  height: 120px;
-    width: 120px; 
-    
-    
-
-}
-
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap');
 
 * {
   margin: 0;
@@ -33,10 +6,10 @@ img{  height: 120px;
 }
 
 body {
+  font-family: 'Open Sans';
   width: 100vw;
   height: 100vh;
   background: linear-gradient(to top, #333, #333 10%, #eee 50%);
-  
 }
 
 header {
@@ -50,8 +23,14 @@ header {
 
 header h1 {
   font-size: 3rem;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   color: #eee;
+
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: auto;
 }
 
 img {
@@ -125,7 +104,6 @@ section {
   color: rgb(238, 50, 12);
 }
 
-.btn #btn_confirmar {
+.btn #btn_agendar {
   color: rgb(84, 159, 4);
 }
-
