--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap");
 
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  font-family: 'Open Sans';
   width: 100vw;
   height: 100vh;
+
   background: linear-gradient(to top, #333, #333 10%, #eee 50%);
+  font-family: "Open Sans";
 }
 
 header {
   height: 5rem;
+
   display: flex;
   align-items: center;
   justify-content: center;
-
-  background-color: #333;
 }
 
 header h1 {
+  color: #333;
   font-size: 3rem;
-  font-family: 'Open Sans';
-  color: #eee;
-
+  font-family: "Open Sans";
   text-align: center;
+
+  margin: auto;
+
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin: auto;
 }
 
 img {
@@ -53,7 +55,7 @@ section {
   width: 40%;
   height: 60%;
 
-  background-color: rgba(139, 116, 222, 0.6);
+  background-color: rgb(0 0 0 / 60%);
 
   display: flex;
   justify-content: center;
@@ -65,6 +67,54 @@ section {
 }
 
 .section_servico {
+  width: 30%;
+  height: auto;
+  padding: 1rem;
+
+  display: block;
+}
+
+.section_servico .servicos {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 10% 90%;
+  align-items: center;
+  justify-content: flex-start;
+  row-gap: 0.5rem;
+}
+
+.section_servico .servicos input {
+  width: 20px;
+  height: 20px;
+
+  border: none;
+
+  accent-color: #0be50b;
+}
+
+.section_servico .servicos label {
+  font-size: 20px;
+  color: #fff;
+}
+
+.section_servico .container_somatoria {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.section_servico .container_somatoria h3 {
+  color: #fff;
+  font-size: 20px;
+}
+.section_servico .container_somatoria .somatoria {
+  background-color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: 600;
+  margin-left: 9px;
 }
 
 .section_cliente {
