--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap');
 
 * {
   margin: 0;
@@ -11,7 +11,7 @@ body {
   height: 100vh;
 
   background: linear-gradient(to top, #333, #333 10%, #eee 50%);
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
 }
 
 header {
@@ -25,7 +25,7 @@ header {
 header h1 {
   color: #333;
   font-size: 3rem;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   text-align: center;
 
   margin: auto;
@@ -52,7 +52,7 @@ main {
 }
 
 section {
-  width: 40%;
+  width: 50%;
   height: 60%;
 
   background-color: rgb(0 0 0 / 60%);
@@ -67,7 +67,7 @@ section {
 }
 
 .section_servico {
-  width: 30%;
+  width: 45%;
   height: auto;
   padding: 1rem;
 
@@ -84,8 +84,8 @@ section {
 }
 
 .section_servico .servicos input {
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
 
   border: none;
 
@@ -93,7 +93,7 @@ section {
 }
 
 .section_servico .servicos label {
-  font-size: 20px;
+  font-size: 18px;
   color: #fff;
 }
 
